<resources>
    <string name="app_name">Rate The Farm</string>
    <string name="page_1_email_hint">Email</string>
    <string name="page_1_login_btn_hint">LOGIN</string>
    <string name="page_1_app_title">🅡🅐🅣🅔 🅣🅗🅔 🅕🅐🅡🅜</string>
    <string name="page_1_password_hint">Password</string>
    <string name="page_1_register">Register</string>

    <string name="page_2_heading">Sign Up</string>
    <string name="page_2_already_registered">Already Registered?</string>
    <string name="page_2_confirm_password">Confirm Your Password</string>
    <string name="page_2_select">Select</string>
    <string name="page_2_farmer">Farmer</string>
    <string name="page_2_wholeseller">Wholeseller</string>
    <string name="page_2_password">Enter Password</string>
    <string name="page_2_email">Enter Email</string>


    <string name="page_3_heading">Enter Details</string>


    <string name="page_4_heading">All Farmers</string>


    <string name="page_5_heading">Farmer Profile</string>
</resources>
